test/types/string/bradc/string2ints/emptyToUint64.good
emptyToUint64.chpl:2: error: Empty string when converting from string to uint(64)
