test/types/string/bradc/string2ints/emptyToUint64.chpl
var e = "";
var x = e:uint(64);

writeln("x is: ", x);
